Aligned todo checkboxes correctly in CSS.

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1114,6 +1114,7 @@ th {
 
 .todo-checkbox {
   position: absolute;
+ 
   width: 1.25rem;
   height: 1.25rem;
   opacity: 0;
@@ -1121,12 +1122,13 @@ th {
 
  .checkbox-label {
   position: relative;
+  display: flex;
+  align-items: center;
   cursor: pointer;
 } 
 
 .custom-checkbox {
   position: absolute;
-  display: inline-block;
   width: 1.25rem;
   height: 1.25rem;
   border: 2px solid var(--main-text-color);
